[package]
name = "poseidon-bn254"
version = "0.1.0"
edition = "2021"

[dependencies]
bn254 = { path = "../bn254" }
itertools = "0.13"

[target.'cfg(all(target_os = "zkvm", target_vendor = "succinct"))'.dependencies]
sp1-lib = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0830", optional = true }
sp1-intrinsics = { path = "../sp1-intrinsics" }

[dev-dependencies]
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
poseidon-base = { git = "https://github.com/scroll-tech/poseidon-circuit", branch = "main" }

[features]
bn254 = [] # planceholder for compatibility with previous versions
zkvm-hint = ["sp1-lib"]
