[workspace]
members = [
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
itertools = "0.13"
poseidon-bn254 = { path = "../..", features = ["bn254"] }

sp1-helper = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0803" }
sp1-lib = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0803" }
sp1-prover = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0803" }
sp1-sdk = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0803", features = ["native-gnark"] }
sp1-zkvm = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0803" }