[workspace]
members = [
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "feat/sp1" }
itertools = "0.13"
poseidon-base = { git = "https://github.com/scroll-tech/poseidon-circuit", branch = "feat/sp1" }
poseidon-bn254 = { path = "../..", features = ["halo2curves_v3"] }

sp1-helper = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0803" }
sp1-lib = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0803" }
sp1-prover = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0803" }
sp1-sdk = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0803", features = ["native-gnark"] }
sp1-zkvm = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0803" }

[patch.crates-io]
ff = { git = "https://github.com/scroll-tech/ff", branch = "feat/sp1"}
halo2curves = { git = "https://github.com/scroll-tech//halo2curves.git", branch = "feat/sp1" }

[patch."https://github.com/scroll-tech/halo2curves.git"]
halo2curves = { git = "https://github.com/scroll-tech//halo2curves.git", branch = "feat/sp1" }